test/error/double.dck
%-

(:def one
  "name")

(:def one
  "name")
